@@ -1,3 +1,5 @@
+// Gradle build script for the BasicGame-on-Gradle project
+
 plugins {
     id 'application'
 }
@@ -35,7 +37,6 @@ tasks.withType(JavaExec) { // Java runtime options:
     //jvmArgs '-Xbatch'
     //jvmArgs '-Xms256m', '-Xmx256m'
     //jvmArgs '-XX:+PrintCompilation'
-    //jvmArgs '-XX:+UseConcMarkSweepGC'
     jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
 }
 
@@ -53,9 +54,9 @@ if (!hasProperty('mainClass')) {
 jar.manifest.attributes('Main-Class': mainClassName)
 
 repositories {
-    //mavenLocal() // to use local SNAPSHOTs of libraries
+    //mavenLocal() // to find local SNAPSHOTs of libraries
     mavenCentral()
-    maven { url 'https://jcenter.bintray.com/' }
+    maven { url 'https://jcenter.bintray.com/' } // for Lemur and SimMath
     //maven { url 'http://nifty-gui.sourceforge.net/nifty-maven-repo' }
     //google()
 
@@ -103,18 +104,19 @@ dependencies {
     //runtimeOnly 'org.jmonkeyengine:jme3-testdata:' + jme3Version
 }
 
-// cleanup tasks
+// cleanup tasks:
 
 clean.dependsOn('cleanDLLs', 'cleanDyLibs', 'cleanLogs', 'cleanSOs')
-task cleanDLLs(type: Delete) {
+
+task cleanDLLs(type: Delete) { // extracted Windows native libraries
     delete fileTree(dir: '.', include: '*.dll')
 }
-task cleanDyLibs(type: Delete) {
+task cleanDyLibs(type: Delete) { // extracted macOSX native libraries
     delete fileTree(dir: '.', include: '*.dylib')
 }
-task cleanLogs(type: Delete) {
+task cleanLogs(type: Delete) { // JVM crash logs
     delete fileTree(dir: '.', include: 'hs_err_pid*.log')
 }
-task cleanSOs(type: Delete) {
+task cleanSOs(type: Delete) { // extracted Linux and Android native libraries
     delete fileTree(dir: '.', include: '*.so')
 }
